elimine la carpeta formulario

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             </tr>
             <tr>
                 <td>Laura</td>
-                <td>Martínez</td>
-                <td>555-1234</td>
+                <td>Fernandez</td>
+                <td>5693456</td>
                 <td>28</td>
-                <td>laura.martinez@example.com</td>
+                <td>laura.Fernandez@gmail.com</td>
             </tr>
             <tr>
                 <td>Carlos</td>
