realice algunos cambios en el index

--- a/index.html
+++ b/index.html
@@ -24,31 +24,31 @@
             </tr>
             <tr>
                 <td>Carlos</td>
-                <td>Gómez</td>
-                <td>555-5678</td>
+                <td>Meneses</td>
+                <td>5612345</td>
                 <td>34</td>
-                <td>carlos.gomez@example.com</td>
+                <td>carlos.M@gmail.com</td>
             </tr>
             <tr>
                 <td>Andrea</td>
                 <td>Rojas</td>
-                <td>555-8765</td>
+                <td>5677869</td>
                 <td>22</td>
-                <td>andrea.rojas@example.com</td>
+                <td>andrea.rojas@hotmail.com</td>
             </tr>
             <tr>
-                <td>Pedro</td>
-                <td>López</td>
-                <td>555-4321</td>
+                <td>Ricardo</td>
+                <td>Zapata</td>
+                <td>5694567</td>
                 <td>41</td>
-                <td>pedro.lopez@example.com</td>
+                <td>Rzapata@gmail.com</td>
             </tr>
             <tr>
                 <td>Lucía</td>
-                <td>Fernández</td>
+                <td>Castro</td>
                 <td>555-7890</td>
                 <td>30</td>
-                <td>lucia.fernandez@example.com</td>
+                <td>LuciaCastro@gmail.com</td>
             </tr>
         </table>
 
@@ -60,20 +60,24 @@
                 <input type="text" name="nombre">
             </p>
             <p>
-                Apellido:<br>
+                <label>Apellido:</label>
+                <br>
                 <input type="text" name="apellido">
             </p>
             <p>
-                Teléfono:<br>
+                <label>Telefono:</label>
+                <br>
                 <input type="text" name="telefono">
             </p>
             <p>
-                Edad:<br>
+                <label>Edad:</label>
+                <br>
                 <input type="number" name="edad">
             </p>
             <p>
-                Correo electrónico:<br>
-                <input type="email" name="correo">
+                <label>Correo electrónico:</label>
+                <br>
+                <input type="email" name="correo" placeholder="example@gmail.com">
             </p>
             <p>
                 <input type="submit" value="Enviar">
